Add status reason field on node_version.
